<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Common -->
    <string name="app_name">DVBViewer Controller</string>
    <string name="expired_message">This version is expired!</string>
    <string name="edit">EDIT</string>
    <string name="copy">Copy</string>
    <string name="remote">Remote</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="record">Record</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="selected">selected</string>
    <string name="switch_to">Switch to channel</string>
    <string name="minutes">minutes</string>
    <string name="gmt">GMT</string>
    <string name="details">Details</string>
    <string name="about">About</string>
    <string name="common_colon">:&#160;</string>
    <string name="about_app">About DVBViewer Controller</string>
    <string name="version">App Version:</string>

    <!-- Channels -->
    <string name="channelList">Channel List</string>
    <string name="refreshChannels">Synchronize channels</string>
    <string name="refresh_now_playing">Refresh EPG</string>
    <string name="favourites">Favourites</string>
    <string name="no_channels">No channels found</string>
    <string name="no_favourites">No favourites found</string>

    <!-- EPG -->
    <string name="channelEPG">Channel EPG</string>
    <string name="epg_update_started">EPG update started</string>
    <string name="epg_update_running">EPG update running</string>
    <string name="today">Today</string>
    <string name="time">Time</string>
    <string name="now">Now</string>
    <string name="evening">Evening</string>
    <string name="tomorrow">tomorrow</string>
    <string name="previousDay">Day back</string>
    <string name="nextDay">Day forward</string>
    <string name="no_epg">No EPG data found</string>

    <!-- Recordings -->
    <string name="recordings">Recording List</string>
    <string name="no_recordings">No recordings found</string>
    <string name="busyDeleteRecordings">Deleting Recording&#8230;</string>

    <!-- Timer -->
    <string name="timer">Timer</string>
    <string name="createTimer">Create Timer</string>
    <string name="editTimer">Edit Timer</string>
    <string name="date">Date</string>
    <string name="active">Active</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="channel">Channel</string>
    <string name="epgBefore">Time Before</string>
    <string name="epgAfter">Time After</string>
    <string name="postTimerAction">After Recording</string>
    <string name="busyDeleteTimer">Deleting Timer&#8230;</string>
    <string name="no_timer">No timer found</string>

    <!-- Streaming -->
    <string name="streamConfig">Stream Configuration</string>
    <string name="stream">Stream</string>
    <string name="quality">Quality</string>
    <string name="aspectRatio">Aspect Ratio</string>
    <string name="ffmpegpreset">FFMPEG Preset</string>
    <string name="maxHeight">Max. Height</string>
    <string name="maxWidth">Max. Width</string>
    <string name="streamStart">Start Stream</string>
    <string name="streamTranscoded">Transcoded Streaming</string>
    <string name="streamDirect">Direct Streaming</string>
    <string name="stream_position">Position</string>
    <string name="stream_hours_hint">HH</string>
    <string name="stream_minutes_hint">MM</string>
    <string name="stream_seconds_hint">SS</string>

    <!-- Tasks -->
    <string name="tasks">Tasks</string>
    <string name="task_execute_security_question">Execute \"{0}\"?</string>
    <string name="EPGStart">Start EPG Scan</string>
    <string name="EPGStop">Stop EPG Scan</string>
    <string name="AutoTimer">Auto Timer</string>
    <string name="RefreshDB">Refresh Recording DB</string>
    <string name="CleanupDB">Cleanup Recording DB</string>
    <string name="RebuildRecordedHistory">Rebuild Recording History</string>
    <string name="ClearRecordingHistory">Clear Recording History</string>
    <string name="ClearRecordingStats">Clear Recording Stats</string>
    <string name="UpdateMediaLibrary">Update Media library DB</string>
    <string name="CleanupPhotoDB">Cleanup Photo library DB</string>
    <string name="CleanupVideoDB">Cleanup Video library DB</string>
    <string name="RebuildVideoDB">Rebuild Video library DB</string>
    <string name="RebuildAudioDB">Rebuild Audio library DB</string>
    <string name="RebuildPhotoDB">Rebuild Photo library DB</string>
    <string name="ClearAudioStats">Clear Audio Library Stats</string>
    <string name="ClearVideoStats">Clear Video Library Stats</string>
    <string name="ClearPhotoStats">Clear Photo Library Stats</string>
    <string name="Hibernate">Hibernate</string>
    <string name="Standby">Standby</string>
    <string name="Shutdown">Shutdown</string>
    <string name="WOL">Wake Recording Service</string>

    <!-- Status -->
    <string name="status">Status</string>
    <string name="status_rs_version">Recording Service Version</string>
    <string name="status_current_recordings">Running Recordings</string>
    <string name="status_current_clients">Connected Clients</string>
    <string name="status_epg_update_running">EPG Update Running</string>
    <string name="status_epg_before">Time Before</string>
    <string name="status_epg_after">Time After</string>
    <string name="status_timezone">Timezone</string>
    <string name="status_def_after_record">Action After Recording</string>
    <string name="status_folder_free">Free</string>
    <string name="status_folder_total">Total</string>

    <!-- Dialogs -->
    <string name="dialog_confirmation_title">Confirmation</string>
    <string name="firstStartMessageTitle">No Connection Settings Found</string>
    <string name="firstStartMessage">No conenction settings found.\n\nDo you want to switch to the settings?</string>
    <string name="confirmDelete">Delete selected Items?</string>
    <string name="noFlashPlayerFound">No suitable video player has been found. \nPlease install a Mpeg/Flash-capable player.</string>

    <!-- Preferences -->
    <string name="preferences">Settings</string>
    <string name="pref_seperator_connection">Connection Settings</string>
    <string name="pref_seperator_channel">Channellist</string>
    <string name="pref_seperator_stream">Streaming</string>
    <string name="pref_seperator_rs_con">Recording Service Settings</string>
    <string name="pref_seperator_dvbv_con">DVBViewer Settings</string>
    <string name="pref_item_rs_conn">Recording Service</string>
    <string name="pref_item_rs_conn_summary">Connection Settings for the Recordingservice</string>
    <string name="pref_item_dvbv_conn">DVBViewer</string>
    <string name="pref_item_dvbv_conn_summary">Connection Settings for the DVBViewer</string>
    <string name="pref_item_rs_url">Recording Service URL</string>
    <string name="pref_item_rs_url_summary">URL for the Recording Service</string>
    <string name="pref_item_rs_port">Recording Service Port</string>
    <string name="pref_item_rs_port_summary">Port for the Recording Service</string>
    <string name="pref_item_dvbv_url">DVBViewer URL</string>
    <string name="pref_item_dvbv_summary">URL for the DVBViewer</string>
    <string name="pref_item_dvbv_port">DVBViewer Port</string>
    <string name="pref_item_dvbv_port_summary">Port for the DVBViewer</string>
    <string name="pref_item_username">Username</string>
    <string name="pref_item_username_summary">Username if required</string>
    <string name="pref_item_password">Password</string>
    <string name="pref_item_password_summary">Password if required</string>
    <string name="pref_item_rs_wol_on_start">Send WOL on App start </string>
    <string name="pref_item_rs_wol_on_start_summary">Tries to wake up the Recording Service on start</string>
    <string name="pref_item_rs_live_stream_port">Live Streaming Port</string>
    <string name="pref_item_rs_live_stream_port_summary">Port for live TV streaming</string>
    <string name="pref_item_rs_media_stream_port">Media Streaming Port</string>
    <string name="pref_item_rs_media_stream_port_summary">Port for Media streaming</string>
    <string name="pref_item_channel_show_current_program">Show current program</string>
    <string name="pref_item_channel_show_current_program_summary">Shows the current program in the channel list</string>
    <string name="pref_item_channel_show_current_program_wifi">Only on WIFI</string>
    <string name="pref_item_channel_show_current_program_wifi_summary">Shows the current program in the channel list only if WIFI is connected</string>
    <string name="pref_item_channel_fav">Use Favourites</string>
    <string name="pref_item_channel_fav_summary">Shows the favourites instead of the channels</string>
    <string name="pref_item_stream_use_external_player">Use external player</string>
    <string name="pref_item_stream_use_external_player_summary">Streams content with another video application</string>
    <string name="pref_item_stream_use_time_before">Time Before As Streamstart</string>
    <string name="pref_item_stream_use_time_before_summary">Specifies whether the Time Before will be pre-selected as Start Position to Stream Recordings.</string>
    <string name="pref_seperator_syncsettings">Synchronisation Settings</string>
    <string name="pref_item_epg_settings">EPG Settings</string>
    <string name="pref_item_epg_settings_sync">Synchronize EPG</string>
    <string name="pref_item_epg_settings_sync_summary">Specifies if the EPG will be saved to local DB. !Attention! IF this option is active no epg will only be loaded from local DB. Option is quite useless Right now.</string>
    <string name="pref_item_epg_settings_days">Days to Sync</string>
    <string name="pref_item_epg_settings_days_summary">Specifies how many days of EPG will be saved in local DB</string>
    <string name="pref_item_epg_settings_fav_only">Synchronize only Favourites</string>
    <string name="pref_item_epg_settings_fav_only_summary">Specifies if only the EPG for Favourites will be saved in local DB.</string>

    <!-- Error -->
    <string name="expiration_title">Version expired</string>
    <string name="error_common">Error</string>
    <string name="error_unknonwn_host">Unknown Host</string>
    <string name="error_no_connection">No Connection</string>
    <string name="error_connection_timeout">Connection timeout</string>
    <string name="error_parsing_xml">Failed to parse the xml data</string>
    <string name="error_sending_report">Error report is sent</string>
    <string name="error_invalid_url">Invalid URL</string>
    <string name="error_invalid_credentials">Authentication failed</string>
    <string name="support_this_app">Support this App</string>
    <string name="quick_stream_hint_title">Stream Channel</string>
    <string name="quick_stream_hint_text">Start a stream by clicking on the channel logo</string>
    <string name="version_unsupported_text">Your Recording Service Version is unsupported. You must run a Version higher than 1.30.1.0 to use the remote function</string>
    <string name="version_unsupported_title">Version unsupported</string>

</resources>