<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menuEdit"
        android:enabled="true"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="always"
        android:title="@string/edit"
        android:visible="true"/>
    
    
    <item
        android:id="@+id/menuCopy"
        android:enabled="true"
        android:icon="@drawable/ic_action_copy"
        android:showAsAction="ifRoom"
        android:title="@string/copy"
        android:visible="true"/>
    
    <item
        android:id="@+id/menuDelete"
        android:enabled="true"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="ifRoom"
        android:title="@string/delete"
        android:visible="true"/>
    
</menu>