<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp" >

    <TextView
        style="@style/commonTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/about_app" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/versionTextLabel"
                style="@style/commonSubTitle"
                android:layout_width="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/version" />

            <TextView
                android:id="@+id/versionTextView"
                android:layout_gravity="center_vertical"
                style="@style/commonSubTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/commonSubTitle"
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/support_this_app" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/paypalButton"
                style="@style/ImageButtonStyle"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_paypal" />
        </TableRow>
    </TableLayout>

</LinearLayout>